feat(core): add flag modifier
